src/formula_force/main/default/objects/Driver__c/fields/TwitterHandle__c.field-meta.xml
<CustomField>
    <fullName>TwitterHandle__c</fullName>
    <externalId>true</externalId>
    <label>Twitter Handle</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>